statum-macros/tests/ui/invalid_legacy_state_helper_traits.stderr
error[E0405]: cannot find trait `StateVariant` in this scope
  --> tests/ui/invalid_legacy_state_helper_traits.rs:21:28
   |
21 | fn assert_state_variant<T: StateVariant>() {}
   |                            ^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `RequiresStateData` in this scope
  --> tests/ui/invalid_legacy_state_helper_traits.rs:23:34
   |
23 | fn assert_requires_state_data<T: RequiresStateData>() {}
   |                                  ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `DoesNotRequireStateData` in this scope
  --> tests/ui/invalid_legacy_state_helper_traits.rs:25:42
   |
25 | fn assert_does_not_require_state_data<T: DoesNotRequireStateData>() {}
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
